# temp_testdir_proc_macro

./: .travis.yml  Cargo.toml  README.md
src/: lib.rs  main.rs
test_with_tempdir/: Cargo.toml
tests/: 01-function-with-no-arg.rs  01-function-with-no-arg.stderr  02-function-with-wrong-type-arg.rs  02-function-with-wrong-type-arg.stderr  03-function-with-wrong-ref-type-arg.rs  03-function-with-wrong-ref-type-arg.stderr  04-has-working-path.rs  tempdir.rs  tests.rs
