[package]
name = "with_tempdir_procmacro"
version = "0.1.0"
authors = ["Jean SIMARD <woshilapin@tuziwo.info>"]
edition = "2018"
description = "Inject a temporary directory and provide as an argument to the function"
keywords = ["macros", "proc_macro", "temp", "test"]
categories = ["filesystem"]
autotests = false

[[test]]
name = "tests"
path = "tests/tests.rs"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "*"
quote = "*"
syn = { version = "*", features = ["extra-traits"] }
tempfile = "*"

[dev-dependencies]
pretty_assertions = "*"
regex = "*"
trybuild = "*"
